--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Frequently Asked Questions</title>
-  <link rel="stylesheet" href="./style.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
 </head>
 <body>
@@ -14,67 +14,68 @@
   </header>
 
   <section class="faq-container">
+    <!-- Repeat for 6–8 questions -->
     <div class="faq">
-      <div class="question">
-        <h3>How long is the internship?</h3>
+      <button class="question" aria-expanded="false">
+        <span>How long is the internship?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>The internship lasts 4–6 weeks depending on performance.</p>
       </div>
     </div>
 
     <div class="faq">
-      <div class="question">
-        <h3>Is the internship paid?</h3>
+      <button class="question" aria-expanded="false">
+        <span>Is the internship paid?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>This is an unpaid internship designed for learning and growth.</p>
       </div>
     </div>
 
     <div class="faq">
-      <div class="question">
-        <h3>Will I get a certificate?</h3>
+      <button class="question" aria-expanded="false">
+        <span>Will I get a certificate?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>Yes, you’ll receive a verified certificate after successful completion.</p>
       </div>
     </div>
 
     <div class="faq">
-      <div class="question">
-        <h3>Is it a remote internship?</h3>
+      <button class="question" aria-expanded="false">
+        <span>Is it a remote internship?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>Yes, all tasks are completed remotely with flexible working hours.</p>
       </div>
     </div>
 
     <div class="faq">
-      <div class="question">
-        <h3>What skills are required?</h3>
+      <button class="question" aria-expanded="false">
+        <span>What skills are required?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>Basic knowledge of HTML, CSS, and JavaScript is recommended.</p>
       </div>
     </div>
 
     <div class="faq">
-      <div class="question">
-        <h3>How do I submit my tasks?</h3>
+      <button class="question" aria-expanded="false">
+        <span>How do I submit my tasks?</span>
         <span class="icon">➕</span>
-      </div>
+      </button>
       <div class="answer">
         <p>You can submit tasks via GitHub, zipped folders, or live demo links.</p>
       </div>
     </div>
   </section>
 
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
